--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
 
   <div id="slogan">"The chemical engineer's trusty companion"</div>
 
+  <p>This is a single page web app for finding chemical solvents with desired properties, namely within specific hydrogen bonding and molar volume ranges.</p>
+
+  <p>Solvent numbers correspond to those in Appendix A, Table A.1 of <a href="http://en.wikipedia.org/wiki/Hansen_solubility_parameter#cite_ref-1">Hansen Solubility Parameters</a>: A user's handbook.</p>
+
   <!-- layout container for columns -->
   <div id="container">
 
@@ -163,7 +167,7 @@
   <!-- Footer bar -->
   <div id="footer">
     <p>
-      Copyright &copy; 2012-2013 <a href="..">Chris Hiszpanski</a>.
+      Copyright &copy; 2012-2014 <a href="..">Chris Hiszpanski</a>.
       All rights reserved.
     </p>
   </div>
