--- a/index.html
+++ b/index.html
@@ -118,9 +118,11 @@
 
   <div id="slogan">"The chemical engineer's trusty companion"</div>
 
-  <p>This is a single page web app for finding chemical solvents with desired properties, namely within specific hydrogen bonding and molar volume ranges.</p>
+  <div id="instructions">
+    <p>This is a single page web app for finding chemical solvents with desired properties, namely within specific hydrogen bonding and molar volume ranges.</p>
 
-  <p>Solvent numbers correspond to those in Appendix A, Table A.1 of <a href="http://en.wikipedia.org/wiki/Hansen_solubility_parameter#cite_ref-1">Hansen Solubility Parameters</a>: A user's handbook.</p>
+    <p>Solvent numbers correspond to those in Appendix A, Table A.1 of <a href="http://en.wikipedia.org/wiki/Hansen_solubility_parameter#cite_ref-1">Hansen Solubility Parameters</a>: A user's handbook.</p>
+  </div>
 
   <!-- layout container for columns -->
   <div id="container">
