--- a/index.html
+++ b/index.html
@@ -119,9 +119,7 @@
   <div id="slogan">"The chemical engineer's trusty companion"</div>
 
   <div id="instructions">
-    <p>This is a single page web app for finding chemical solvents with desired properties, namely within specific hydrogen bonding and molar volume ranges.</p>
-
-    <p>Solvent numbers correspond to those in Appendix A, Table A.1 of <a href="http://en.wikipedia.org/wiki/Hansen_solubility_parameter#cite_ref-1">Hansen Solubility Parameters</a>: A user's handbook.</p>
+    Solvent numbers correspond to those in Appendix A, Table A.1 of <a href="http://en.wikipedia.org/wiki/Hansen_solubility_parameter#cite_ref-1">Hansen Solubility Parameters</a>: A user's handbook.
   </div>
 
   <!-- layout container for columns -->
